# Nexa

./: .gitignore  MEMORY_BANK.md  README.md  README_EN.md  SECURITY.md  fix.py  fix_agent.py  fix_cg.py  fix_cli.py  fix_docs.py  fix_gen.py  fix_registry.py  fix_schema.py  fix_stdlib.py  fix_stdlib_schema.py  format_memory_bank.py  nexa  out_03.txt  parse_debug.py  parse_debug_2.py  patch_agent.py  patch_codegen.py  patch_codegen_2.py  patch_flush.py  patch_parser.py  patch_registry.py  patch_stdlib.py  patch_transformer.py  patch_transformer_2.py  requirements.txt  secrets.nxs  setup.py  summary.txt  test_09_runner.py  test_doc_examples.py  test_fastmatch.py  test_mcp.py  test_out.txt  test_parse.nx  test_parse.py  (+1 more)
.nexa_cache/: StreamBot_memory.json
AGENT_LEARN/: AGENT_GUIDE.md  INSTALL_AND_HELLO_WORLD.md
avm/: Cargo.toml  build.rs
avm/benches/: paper_performance_bench.rs
avm/src/: lib.rs  main.rs
avm/src/bytecode/: compiler.rs  instructions.rs  mod.rs
avm/src/compiler/: ast.rs  lexer.rs  mod.rs  parser.rs  type_checker.rs
avm/src/ffi/: c_api.rs  mod.rs  python.rs
avm/src/runtime/: agent.rs  contracts.rs  jobs.rs  llm.rs  mod.rs  result_types.rs  tool.rs
avm/src/utils/: error.rs  mod.rs
avm/src/vm/: context_pager.rs  cow_memory.rs  interpreter.rs  mod.rs  scheduler.rs  stack.rs
avm/src/wasm/: mod.rs  runtime.rs  sandbox.rs
docs/: 01_nexa_syntax_reference.md  01_nexa_v0.1_syntax.md  02_compiler_architecture.md  02_compiler_transpiler_design.md  03_roadmap_and_vision.md  04_generated_python_reference.py  05_architecture_evolution.md  MEMORY_BANK.md  (+6 more)
(+210 files in other folders)
